src/objects/CC_Program_Service__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Signifies if Program is active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>CC_Agency</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Available_Seats__c</fullName>
        <formula>Capacity__c - Filled_Seats__c - Freed_Seats__c - Reserved_Seats__c - Vacated_Seats__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Filled_Seats__c</fullName>
        <label>Filled Seats</label>
        <summaryFilterItems>
            <field>CC_Enrolled_Program__c.Status__c</field>
            <operation>equals</operation>
            <value>Filled</value>
        </summaryFilterItems>
        <summaryForeignKey>CC_Enrolled_Program__c.Program_Detail__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Freed_Seats__c</fullName>
        <label>Freed Seats</label>
        <summaryFilterItems>
            <field>CC_Enrolled_Program__c.Status__c</field>
            <operation>equals</operation>
            <value>Freed</value>
        </summaryFilterItems>
        <summaryForeignKey>CC_Enrolled_Program__c.Program_Detail__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Master_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CC_Program_Service__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Program</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CC_Program_Service__c</referenceTo>
        <relationshipLabel>Program Details</relationshipLabel>
        <relationshipName>Programs_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Modifier_1__c</fullName>
        <label>Modifier 1</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modifier_2__c</fullName>
        <label>Modifier 2</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modifier_3__c</fullName>
        <label>Modifier 3</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modifier_Code__c</fullName>
        <formula>Modifier_1__c +&apos;-&apos;+ Modifier_2__c +&apos;-&apos;+ Modifier_3__c +&apos;-&apos;+ Modifier_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Modifier Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CC_Program_Service__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Program</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CC_Program_Service__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reserved_Seats__c</fullName>
        <label>Reserved Seats</label>
        <summaryFilterItems>
            <field>CC_Enrolled_Program__c.Status__c</field>
            <operation>equals</operation>
            <value>Reserved</value>
        </summaryFilterItems>
        <summaryForeignKey>CC_Enrolled_Program__c.Program_Detail__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Vacated_Seats__c</fullName>
        <label>Vacated Seats</label>
        <summaryFilterItems>
            <field>CC_Enrolled_Program__c.Status__c</field>
            <operation>equals</operation>
            <value>Vacated</value>
        </summaryFilterItems>
        <summaryForeignKey>CC_Enrolled_Program__c.Program_Detail__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Waitlisted_Seats__c</fullName>
        <label>Waitlisted Seats</label>
        <summaryFilterItems>
            <field>CC_Enrolled_Program__c.Status__c</field>
            <operation>equals</operation>
            <value>Waitlisted</value>
        </summaryFilterItems>
        <summaryForeignKey>CC_Enrolled_Program__c.Program_Detail__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Program &amp; Service</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Program_Detail</fullName>
        <columns>NAME</columns>
        <columns>Master_Program__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CC_Program_Service__c.Program_Detail</value>
        </filters>
        <label>Program Detail</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Programs</fullName>
        <columns>NAME</columns>
        <columns>Agency__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OBJECT_ID</columns>
        <columns>Program__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CC_Program_Service__c.Program</value>
        </filters>
        <label>Programs</label>
    </listViews>
    <listViews>
        <fullName>Services</fullName>
        <columns>NAME</columns>
        <columns>Agency__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OBJECT_ID</columns>
        <columns>Program__c</columns>
        <columns>Active__c</columns>
        <columns>Modifier_1__c</columns>
        <columns>Modifier_2__c</columns>
        <columns>Modifier_3__c</columns>
        <columns>Modifier_4__c</columns>
        <columns>Modifier_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CC_Program_Service__c.Service</value>
        </filters>
        <label>Services</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs &amp; Services</pluralLabel>
    <recordTypes>
        <fullName>Program</fullName>
        <active>true</active>
        <description>Waiver Program</description>
        <label>Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>Program_Detail</fullName>
        <active>true</active>
        <label>Program Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service</fullName>
        <active>true</active>
        <description>Services for a Program</description>
        <label>Service</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Available_Seats_Not_Negative</fullName>
        <active>true</active>
        <errorConditionFormula>IF( RecordType.DeveloperName =&apos;Program_Detail&apos;,Available_Seats__c &lt;0,false)</errorConditionFormula>
        <errorMessage>Not enough available seats</errorMessage>
    </validationRules>
</CustomObject>